# lore

./: .editorconfig  .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  ROADMAP.md  SECURITY.md  cliff.toml  deny.toml  dprint.json  justfile
.cargo/: config.toml
.githooks/: pre-commit
.github/workflows/: ci.yml  release.yml
docs/: architecture.md  configuration.md  hook-pipeline-reference.md  pattern-authoring-guide.md  release-process.md  search-mechanics.md
docs/brainstorms/: 2026-03-24-phase0-project-infrastructure-requirements.md  2026-03-27-ci-workflow-requirements.md  2026-03-27-scaffold-porting-requirements.md  2026-03-30-dev-install-requirements.md  2026-03-30-pull-progress-requirements.md  2026-03-31-branch-push-requirements.md  2026-03-31-init-experience-requirements.md  2026-04-01-agent-integration-claude-code-requirements.md  2026-04-01-ollama-integration-tests-requirements.md  2026-04-01-search-relevance-boosting-requirements.md  2026-04-04-fts5-porter-stemming-requirements.md  2026-04-04-security-hardening-requirements.md  (+13 more)
scripts/: release-prep.sh
src/: chunking.rs  config.rs  database.rs  debug.rs  embeddings.rs  git.rs  hash.rs  hook.rs  ingest.rs  lib.rs  lockfile.rs  loreignore.rs  main.rs  provision.rs  server.rs  status.rs
tests/: branch_push.rs  coverage_check_skill_parses.rs  e2e.rs  edge_cases.rs  extract_queries.rs  hook.rs  init_output.rs  invariants.rs  loreignore.rs  ollama_integration.rs  release_prep.rs  search_relevance.rs  single_file_ingest.rs  smoke.rs
(+127 files in other folders)
