[package]
name = "lore"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "Local semantic search MCP server for software patterns"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
rusqlite = { version = "0.39", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlite-vec = "0.1"
toml = "0.8"
ureq = { version = "3", features = ["json"] }
walkdir = "2"

[features]
test-support = []

[dev-dependencies]
assert_cmd = "2"
insta = { version = "1", features = ["json"] }
predicates = "3"
tempfile = "3"

[lints.rust]
unsafe_code = "deny"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
missing_errors_doc = "allow"
missing_panics_doc = "allow"
module_name_repetitions = "allow"
must_use_candidate = "allow"

[profile.release]
lto = true
opt-level = "z"
strip = true
